--- a/public/static/reader/epub/index.html
+++ b/public/static/reader/epub/index.html
@@ -145,10 +145,10 @@
                             <div class="setting-content">
                                 ePubViewer v3.0.0
                                 <br /> Copyright 2018
-                                <a href="https://geek1011.github.io">Patrick Gaskin</a>
+                                <a href="https://kentsin.github.io">Patrick Gaskin</a>
                                 <br />
-                                <a href="https://github.com/geek1011/ePubViewer">Code</a> |
-                                <a href="https://github.com/geek1011/ePubViewer/issues">Report an issue</a>
+                                <a href="https://github.com/kentsin/ePubViewer">Code</a> |
+                                <a href="https://github.com/kentsin/ePubViewer/issues">Report an issue</a>
                                 <br />
                                 <br /> This app requires Microsoft Edge 15+, Mozilla Firefox 50+, Chrome 50+, or Safari 10+.
                             </div>
@@ -187,7 +187,7 @@
                     <div class="message">
                         Unknown error. If this message does not disappear in a few seconds, try using a different browser (Chrome or Firefox), and
                         if the issue still persists,
-                        <a href="https://github.com/geek1011/ePubViewer">report it here</a>.
+                        <a href="https://github.com/kentsin/ePubViewer">report it here</a>.
                     </div>
                 </div>
             </div>
